# DynamicRetailInventoryManagement

./: DynamicRetailInventoryManagement.pyproj  DynamicRetailInventoryManagement.sln  README.md
prototype/: app.py  app_1st.py  app_2nd.py  app_min.py  data_generator.py  data_generator_1st.py  data_generator_safe.py  database_1st.py  inventory.db  pyproject.toml  requirements.txt  requirements_1st.txt
